s15: repair RAG snapshot after migration